Fix buttons alignment in migration modal

--- a/app/styles/app/modules/modals.scss
+++ b/app/styles/app/modules/modals.scss
@@ -1,7 +1,7 @@
 .repository-migration-modal {
 
   .migration-modal-cancel {
-    margin-left: 6px;
+    margin-right: 6px;
   }
 
   h3 {
